<resources>
    <string name="app_name">MusicMakerProto</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="btn_add_newPlaylistPage">Create</string>
    <string name="textView_newPlaylistPage">Name</string>
    <string name="btn_new_playlist">+ New Playlist</string>
    <string name="btn_playPause">Play or Pause</string>
    <string name="textView_song_name">Title</string>
    <string name="btn_skipForward">Skip to next song</string>
    <string name="img_album_cover">Album art of current song</string>
    <string name="img_transparent_click">Trigger new activity on click to view current song</string>
    <string name="btn_edit">Edit Playlist</string>
    <string name="btn_save_new_playlist">Save Changes</string>
    <string name="btn_add_songs_to_playlist">Add Songs</string>
    <string name="btn_delete_playlist">Delete Playlist</string>
    <string name="btn_add_songs_to_plist">Add songs to playlist</string>
</resources>
