<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="team0.musicmakerproto.LibraryActivity">

    <Button
        android:id="@+id/new_playlist_btn"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_new_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@color/drawer_item"
        app:itemTextColor="@color/drawer_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/drawer_nav_view" />

    <GridView
        android:id="@+id/PlaylistGrid"
        android:layout_width="370dp"
        android:layout_height="271dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:numColumns="2"
        app:layout_constraintBottom_toTopOf="@+id/PlaybackPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_library_songs" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/PlaybackPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#33FF0000"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/notes_albumCover"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/img_album_cover"
            android:src="@android:drawable/alert_dark_frame"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/collection_song_name"
            android:layout_width="201dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/textView_song_name"
            android:maxLines="1"
            android:text="@string/textView_song_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/PBarPlayPause"
            app:layout_constraintStart_toEndOf="@+id/notes_albumCover"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/PBarPlayPause"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="#00000000"
            android:contentDescription="@string/btn_playPause"
            android:onClick="playPauseBtnPressed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/PBarSkip"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_play_btn" />

        <ImageButton
            android:id="@+id/PBarSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:background="#00000000"
            android:contentDescription="@string/btn_skipForward"
            android:onClick="skipForwardBtnPressed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_skip_btn" />

        <ImageButton
            android:id="@+id/PBarBackground"
            android:layout_width="271dp"
            android:layout_height="50dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="8dp"
            android:background="@android:drawable/screen_background_light_transparent"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/img_transparent_click"
            app:layout_constraintEnd_toStartOf="@+id/PBarPlayPause"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/notes_albumCover"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/selectableItemBackgroundBorderless" />

    </android.support.constraint.ConstraintLayout>

    <EditText
        android:imeOptions="actionDone"
        android:id="@+id/search_library_songs"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/searchPlaylist"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_playlist_btn" />

</android.support.constraint.ConstraintLayout>
